# C-Pico_USB_Console

./: README.md  build.py  run.sh
pico_example_program/: CMakeLists.txt  build.sh
pico_example_program/src/: main.c
pico_example_program/src/include/pico_usb_console/: protocol.h
src/: main.c
src/include/: device.h  keyboard.h  protocol.h  terminal.h  ui.h
src/pico_usb_console/: device.c  keyboard.c  protocol.c  terminal.c  ui.c
